# xchk-ap-db-intro-content

./: .gitignore  boot_django.py  load_tests.py  pyproject.toml  setup.py
xchk_ap_db_intro/: apps.py  contentviews.py  course.py  strats.py  tests.py  urls.py
xchk_ap_db_intro/templates/xchk_ap_db_intro/: xchk_ap_db_intro_demo.html
xchk_ap_db_intro_content/: apps.py  contentviews.py  course.py  strats.py  tests.py  urls.py  views.py
xchk_ap_db_intro_content/signals/: handlers.py
xchk_ap_db_intro_content/templates/xchk_ap_db_intro_content/: alle_afspraken.html  basisstructuren_van_een_relationele_database.html  create_statement.html  created.html  database_selecteren.html  datatypes_booleans.html  datatypes_gehele_getallen.html  datatypes_simpele_tekst.html  datatypes_temporeel.html  diagramnotatie_tabel.html  drop_statement.html  if_not_exists.html  insert_statement.html  lokale_vs_remote_database.html  mysql_docker_image.html  mysql_workbench_installeren.html  not_null.html  select_statement.html  subtalen_van_my_sql.html  verbinden_met_de_database_server_via_workbench.html  verbinden_met_een_lokale_database_server_via_workbench.html  voorbeeld_van_een_relationele_database.html  voorbeeldinstructies_mysql.html  voordelen_van_een_database.html  wat_is_docker.html  wat_is_een_databank.html  wat_is_een_databank_database.html  wat_is_een_relationele_database.html  wat_is_mysql.html  welke_soorten_databases_bestaan_er_nog.html  zelftest_theorie_een.html
