[tool.poetry]
name = "xchk_ap_db_intro_content"
version = "0.0.1"
description = "Course material related to APDBIntro for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
xchk-core = {url = "http://github.com/v-nys/xchk_core/tarball/develop"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
