[tool.poetry]
name = "xchk_ap_db_intro_content"
version = "0.0.1"
description = "Course material related to APDBIntro for the xchk teaching framework"
authors = ["Vincent Nys <vincentnys@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
mysql-connector-python = "8.0.19"

[tool.poetry.dev-dependencies]
xchk-core = {url = "http://github.com/v-nys/xchk_core/tarball/develop"}
xchk-regex-strategies = {git = "git@github.com:v-nys/xchk_regex_strategies.git", branch="develop"}
xchk-multiple-choice-strategies = {git = "git@github.com:v-nys/xchk-multiple-choice-strategies.git", branch="develop"}
django-allauth = "0.40.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
